# rust_rocket_diesel_demo

./: .env.example  Cargo.toml  README.md
diesel_dep/: sqlite3.lib
migrations/2022-11-15-165153_initial_migration/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: mod.rs
templates/: index.tera
